samples/_failures_safe/1761255114_5e76cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a582e72b.c: In function ‘main’:
./samples/SAFE/__tmp_a582e72b.c:137:9: error: expected declaration or statement at end of input
  137 |         printf("2. Search messages\n");
      |         ^~~~~~
./samples/SAFE/__tmp_a582e72b.c:137:9: error: expected declaration or statement at end of input
